# pydantic-learning

./: pyproject.toml
app/: main.py
examples/: cerberus.ipynb  marshmallow.ipynb  pydantic_basics.ipynb  pydantic_deep.ipynb
fastapi_app/: main.py
