[tool.poetry]
name = "pydantic-learning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
pydantic = "^1.9.1"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
ipython = "^8.4.0"
Cerberus = "^1.3.4"
marshmallow = "^3.17.0"
autopep8 = "^1.6.0"
marshmallow-dataclass = "^8.5.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
